feat: create table db and write api category
